fixed layout - overflow bug

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -15,9 +15,12 @@ mat-sidenav-container {
   flex: 1;
 }
 
+mat-sidenav-content {
+  flex: 1;
+}
+
 mat-sidenav {
   width: 120px;
-  background-color: red;
 }
 
 ::ng-deep .mat-drawer-inner-container {
@@ -36,8 +39,4 @@ mat-sidenav {
 
 .sidenav-item-icon {
   padding-right: 10px;
-}
-
-.main-content {
-  flex: 1;
 }
